tests/data-clumps/test-cases/parameter-parameter/negative-insufficient-shared/typescript/source/BillingProcessor.ts
export class BillingProcessor {
  createInvoice(patientId: string, doctorId: string, amount: number): void {
    console.log(`Creating invoice of ${amount} for ${patientId}`);
  }
}
